Load the FB script synchronously to avoid race conditions during page load

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         });
       }
     </script>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+    <script crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
