Make the FB application id an environment variable

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId            : '394152652585767',
+          appId            : '<{VITE_APP_ID}>',
           autoLogAppEvents : true,
           xfbml            : true,
           version          : 'v14.0'
