Revert "Make the FB application id an environment variable"
This reverts commit 31d3ce3dfbb11542b01e9573736145eb5669a752.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId            : '<{VITE_APP_ID}>',
+          appId            : '394152652585767',
           autoLogAppEvents : true,
           xfbml            : true,
           version          : 'v14.0'
